--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
             </ul>
 
             <div class="wrapper">
-              <a href="https://www.kivicube.com/scenes/oy5siE0F65lgo41Uz2rP13hs8fKHvWP5
-" class="btn btn-primary">裸眼3D</a>
+              <a href="https://www.kivicube.com/scenes/KOM1yLFv8lg3P2qtq68CJLwP5IOkpy27
+" class="btn btn-primary">IMAGE裸眼插画</a>
 
-              <a href="https://www.kivicube.com/scenes/oy5siE0F65lgo41Uz2rP13hs8fKHvWP5" class="btn btn-secondary">古风画作</a>
+              <a href="https://www.kivicube.com/scenes/oy5siE0F65lgo41Uz2rP13hs8fKHvWP5" class="btn btn-secondary">AR分层立体海报</a>
             </div>
 
           </div>
