--- a/contact.html
+++ b/contact.html
@@ -66,11 +66,19 @@
           </li>
 
           <li class="navbar-item">
-            <a href="./service.html" class="label-lg navbar-link has-after">融合教育服务</a>
+            <a href="./portfolio.html" class="label-lg navbar-link has-after">自闭症知识库</a>
           </li>
 
           <li class="navbar-item">
-            <a href="./portfolio.html" class="label-lg navbar-link has-after">自闭症知识库</a>
+            <a href="./service.html" class="label-lg navbar-link has-after">融合教育</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="https://www.pkucarenjk.com/%e5%ad%a4%e7%8b%ac%e7%97%87%e7%9b%b8%e5%85%b3%e8%83%bd%e5%8a%9b%e6%b5%8b%e8%af%84" class="label-lg navbar-link has-after">专业能力测评</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="http://www.rongjiao.net/solution/solution119/" class="label-lg navbar-link has-after">更多服务方案</a>
           </li>
 
           <li class="navbar-item">
@@ -165,7 +173,7 @@
                 <div>
                   <p class="label-lg">我们的邮箱</p>
 
-                  <a href="tel:info@domainname.com" class="body-lg">huayu@njupt.edu.cn</a>
+                  <a href="tel:info@domainname.com" class="body-lg">b21150329@njupt.edu.cn</a>
                 </div>
 
               </li>
