--- a/portfolio.html
+++ b/portfolio.html
@@ -66,11 +66,19 @@
           </li>
 
           <li class="navbar-item">
-            <a href="./service.html" class="label-lg navbar-link has-after">融合教育服务</a>
+            <a href="#" class="label-lg navbar-link has-after active">孤独症知识库</a>
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="label-lg navbar-link has-after active">孤独症知识库</a>
+            <a href="./service.html" class="label-lg navbar-link has-after">融合教育</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="https://www.pkucarenjk.com/%e5%ad%a4%e7%8b%ac%e7%97%87%e7%9b%b8%e5%85%b3%e8%83%bd%e5%8a%9b%e6%b5%8b%e8%af%84" class="label-lg navbar-link has-after">专业能力测评</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="http://www.rongjiao.net/solution/solution119/" class="label-lg navbar-link has-after">更多服务方案</a>
           </li>
 
           <li class="navbar-item">
@@ -114,7 +122,7 @@
                   <img src="./assets/images/I3.jpg" width="750" height="300" loading="lazy"
                     alt="Website Design for Marketing Agency Startup" class="img-cover">
 
-                  <a href="#" class="btn-icon" aria-label="More about Website Design for Marketing Agency Startup">
+                  <a href="https://www.asd-home.cn/" class="btn-icon" aria-label="More about Website Design for Marketing Agency Startup">
                     <ion-icon name="arrow-forward-sharp" aria-hidden="true"></ion-icon>
                   </a>
                 </div>
@@ -136,7 +144,7 @@
        7、它与教育有一定关系。 有些也是在出生后形成的。 例如，父母的照料还不够。 我感到孤独和寂寞。<br/>
                   </p>
 
-                  <a href="#" class="btn btn-primary">查看更多</a>
+                  <a href="https://www.alsolife.com/autism" class="btn btn-primary">查看更多</a>
 
                 </div>
 
@@ -150,7 +158,7 @@
                   <img src="./assets/images/I4.jpg" width="800" height="540" loading="lazy"
                     alt="Website Design for Marketing Agency Startup" class="img-cover">
 
-                  <a href="#" class="btn-icon" aria-label="More about Website Design for Marketing Agency Startup">
+                  <a href="https://www.alsolife.com/autism" class="btn-icon" aria-label="More about Website Design for Marketing Agency Startup">
                     <ion-icon name="arrow-forward-sharp" aria-hidden="true"></ion-icon>
                   </a>
                 </div>
@@ -165,7 +173,7 @@
                     &nbsp;&nbsp;&nbsp;孤独症，也称自闭症，属于广泛性发育障碍的一种，是常见的儿童精神障碍之一。它是以社会交往障碍，语言发育障碍，兴趣范围狭窄，刻板重复的动作为主要临床表现的一组行为综合征。<br/>&nbsp;&nbsp;&nbsp;自闭症儿童在思维、人际关系、语言沟通等方面发展严重不足，这些往往都会导致哭闹、动作刻板、自我刺激、自我伤害、攻击他人等问题行为的产生。在自闭症中，自我伤害、敌意、刻板行为、破坏行为是最常见的问题行为。这些问题行为如果不及时进行干预，不仅严重影响自闭症儿童的教育训练和日常生活以及日常生活技能的学习，还可能会使他们的自闭倾向日渐严重，有时还会危及自身及他人的人身安全。
                   </p>
 
-                  <a href="#" class="btn btn-primary">查看更多</a>
+                  <a href="https://www.alsolife.com/autism" class="btn btn-primary">查看更多</a>
 
                 </div>
 
@@ -201,7 +209,7 @@
        &nbsp;&nbsp;&nbsp;社交反应量表（SRS）适用于4～18岁儿童，它将社交能力量化，用来评估儿童社交能力情况。SRS由5个亚量表共65个项目混编组成，都是关于儿童社交情况的描述，内容包括正面描述和自闭症症状描述，涵盖了社会交往中的行为、沟通和自闭症重复刻板的行为方式等几个方面。<br/>
                   </p>
 
-                  <a href="#" class="btn btn-primary">查看更多</a>
+                  <a href="https://www.alsolife.com/autism/screen" class="btn btn-primary">查看更多</a>
 
                 </div>
 
@@ -215,7 +223,7 @@
                   <img src="./assets/images/I6.jpg" width="800" height="540" loading="lazy"
                     alt="Website Design for Marketing Agency Startup" class="img-cover">
 
-                  <a href="#" class="btn-icon" aria-label="More about Website Design for Marketing Agency Startup">
+                  <a href="https://www.pkucarenjk.com/" class="btn-icon" aria-label="More about Website Design for Marketing Agency Startup">
                     <ion-icon name="arrow-forward-sharp" aria-hidden="true"></ion-icon>
                   </a>
                 </div>
@@ -239,7 +247,7 @@
       &nbsp;&nbsp;&nbsp;其实，轻度自闭症人数占有整个自闭症群体的百分之七十，大多数低龄的自闭症孩子，经过及时科学的干预，可以在一两年内使其语言和智力基本恢复正常。
                   </p>
 
-                  <a href="#" class="btn btn-primary">查看更多</a>
+                  <a href="https://www.pkucarenjk.com/" class="btn btn-primary">查看更多</a>
 
                 </div>
 
