--- a/service.html
+++ b/service.html
@@ -66,11 +66,18 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="label-lg navbar-link has-after active">融合教育服务</a>
+            <a href="./portfolio.html" class="label-lg navbar-link has-after">孤独症知识库</a>
           </li>
 
           <li class="navbar-item">
-            <a href="./portfolio.html" class="label-lg navbar-link has-after">孤独症知识库</a>
+            <a href="#" class="label-lg navbar-link has-after active">融合教育</a>
+          </li>
+          <li class="navbar-item">
+            <a href="https://www.pkucarenjk.com/%e5%ad%a4%e7%8b%ac%e7%97%87%e7%9b%b8%e5%85%b3%e8%83%bd%e5%8a%9b%e6%b5%8b%e8%af%84" class="label-lg navbar-link has-after">专业能力测评</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="http://www.rongjiao.net/solution/solution119/" class="label-lg navbar-link has-after">更多服务方案</a>
           </li>
 
           <li class="navbar-item">
@@ -149,7 +156,18 @@
               <div class="card card-md" style="background-color: hsl(76, 39%, 72%)">
 
                 <div class="card-media">
-                  <ion-icon name="code-slash-outline" aria-hidden="true"></ion-icon>
+                  <a id="openWindowButton" href="###" class="btn-icon" aria-label="More about Website Design for Marketing Agency Startup">
+
+
+                    <script>
+                      var button = document.getElementById("openWindowButton");
+                      button.addEventListener("click", function() {
+                        window.open("./Simon game.html", 'newwindow', 'height=400, width=600, top=800, left=750, toolbar=no, menubar=no, scrollbars=no, resizable=no,location=no, status=no');
+                      });
+                    </script>
+
+                    <ion-icon name="arrow-forward-sharp" aria-hidden="true"></ion-icon>
+                  </a>
                 </div>
 
                 <div>
